--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Kinvo Easy Inventory"
+        android:label="EasyInventory"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar">
@@ -34,7 +34,6 @@
             android:theme="@style/Theme.EasyInventory"/>
 
 
-
         <!-- ✅ Login Screen -->
         <activity android:name=".MembershipLoginActivity"
             android:theme="@style/Theme.EasyInventory"/>
@@ -46,12 +45,16 @@
             android:theme="@style/Theme.EasyInventory"/>
         <activity android:name=".LoginActivity"
             android:theme="@style/Theme.EasyInventory"/>
+        <activity android:name=".WebViewLoginActivity"
+            android:theme="@style/Theme.EasyInventory"/>
+
 
         <!-- ✅ Product Search Screen -->
         <activity android:name=".ProductSearchActivity"
             android:theme="@style/Theme.EasyInventory"/>
         <activity android:name=".WebViewActivity"
             android:theme="@style/Theme.EasyInventory"/>
+
 
 
         <!-- ✅ Main Activity -->
