--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.9.0-rc02"
+agp = "8.10.0-rc02"
 emdk = "9.1.1"
 gson = "2.10.1"
 kotlin = "1.9.24"
@@ -16,6 +16,7 @@ recyclerview = "1.4.0"
 volley = "1.2.1"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+browser = "1.9.0-alpha02"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +34,7 @@ play-services-analytics-impl = { group = "com.google.android.gms", name = "play-
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
