--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ activity = "1.8.0"
 constraintlayout = "2.1.4"
 browser = "1.9.0-alpha02"
 preference = "1.2.1"
+firebaseComponents = "19.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,6 +44,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
+firebase-components = { group = "com.google.firebase", name = "firebase-components", version.ref = "firebaseComponents" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
